@@ -1,5 +1,11 @@
 2010-12-13  Lee Howard <faxguy@howardsilvan.com>
 
+	* libtiff/tif_color.c: prevent crash in handling bad TIFFs
+	resolves CVE-2010-2595
+	http://bugzilla.maptools.org/show_bug.cgi?id=2208
+
+2010-12-13  Lee Howard <faxguy@howardsilvan.com>
+
 	* tools/tiffcrop.c: new release by Richard Nolde
 	http://bugzilla.maptools.org/show_bug.cgi?id=2004
 
